--- a/src/app/application-search/application-search.component.html
+++ b/src/app/application-search/application-search.component.html
@@ -174,6 +174,9 @@
               </tr>
               </thead>
               <tbody>
+              <tr class="infoWindow">
+                <td colspan="6" class="hiddenRow" style="padding:0;"></td>
+              </tr>
               <ng-container *ngFor="let result of productPartResults">
               <tr role="row" class="odd">
                 <td>{{result.partPrompt_si}}</td>
