--- a/src/assets/custom-apps.css
+++ b/src/assets/custom-apps.css
@@ -1,4 +1,4 @@
-.bootstrap a:hover,
+457.bootstrap a:hover,
 .bootstrap a:focus,
 .bootstrap input:hover,
 .bootstrap input:focus,
@@ -58,7 +58,16 @@
 	padding-top: 40px;
 	padding-bottom: 40px;
 }
+#g3_homePage .info_section{
+	margin-bottom: 0px;
+}
 
+.fusion-search .search-input .input-group-btn .search-btn-desktop{
+	height: 26px !important;
+}
+.information .contact.footer-contact-section {
+	margin-top: 40px;
+}
 .bootstrap .container {
 	max-width: 1170px;
 }
@@ -162,7 +171,7 @@ input[type="text"]::-webkit-input-placeholder {
 	padding-top: 8px;
 	float: right;
 	padding-top: 3px;
-	float: right;
+
 	font-size: 1.5rem;
 	color: #424242;
 }
@@ -175,10 +184,31 @@ input[type="text"]::-webkit-input-placeholder {
 	border-right-color: #000;
 	width:0;
 }
+.tooltip.right .tooltip-arrow{
+	top:50%;
+	left:0;
+	margin-top:-5px;
+	border-top:5px solid transparent;
+	border-bottom:5px solid transparent;
+	border-right:5px solid #000;
+	transform:rotate(0deg)
+}
+.tooltip.right .tooltip-arrow ::after {
+	content: "";
+	position: absolute;
+	top: 50%;
+	right: 100%;
+	margin-top: -5px;
+	border-width: 5px;
+	border-style: solid;
+	border-color: transparent #555 transparent transparent;
+}
 
 .tooltip.right .tooltip-inner{
 	font-size:13px;
 	color: #fff;
+	border-radius:6px;
+	padding:5px;
 }
 
 
@@ -215,7 +245,7 @@ input[type="text"]::-webkit-input-placeholder {
 #search-results_length {
 	float: right;
 	background-color: white;
-	padding: 14px;
+	padding: 11px 14px 10px 14px;
 }
 
 .bootstrap label {
@@ -238,7 +268,7 @@ input[type="text"]::-webkit-input-placeholder {
 	-webkit-text-decoration-skip: objects;
 }
 .bootstrap a:hover{
-	text-decoration: none;
+	/* text-decoration: none; */
 }
 .dataTables_paginate a.paginate_button{
 	display: inline-block;
@@ -254,7 +284,7 @@ input[type="text"]::-webkit-input-placeholder {
 	transition: color .24s ease-in-out;
 }
 .dataTables_paginate a.paginate_button.disabled {
-	color: #a5a5a5;
+	color: #a5a5a5 !important;
 	cursor: default;
 }
 
@@ -444,10 +474,6 @@ input[type="text"]::-webkit-input-placeholder {
 	outline: none;
 }
 
-.search-disable {
-	background: #6b6b6b !important;
-}
-
 /*Modal Style END */
 
 
@@ -616,9 +642,9 @@ input[type="text"]::-webkit-input-placeholder {
 	margin-top: 31px;
 }
 
-/*#page-title{
-	margin-bottom: 24px;
-}*/
+/* #page-title{ */
+/* margin-bottom: 24px; */
+/* } */
 
 #g3_homePage .bootstrap  .button-set-email .button-email {
 	margin-right: 10px;
@@ -873,7 +899,7 @@ input[type="text"]::-webkit-input-placeholder {
 	border-radius: 0px;
 }
 #checkSel li:hover{
-	cursor: pointer;
+	cursor: default;
 }
 #checkSel li span{
 	font-size: 14px;
@@ -1041,10 +1067,11 @@ input[type="text"]::-webkit-input-placeholder {
 
 
 .follow-us span.font-style-brown {
-	font-family: Arial, sans-serif;
-	font-size: 13px;
+	font-family: 'Roboto', Helvetica, Arial, sans-serif;
+	font-size: 17px;
 	line-height: 1.38;
-	color: #353535;
+	color: #6f6754;
+	font-weight: 500;
 }
 .follow-us.borderTop{
 	padding: 30px 40px;
@@ -1057,80 +1084,81 @@ fusion-search .search-input .input-group-btn .search-btn-desktop span {
 	font-weight: 500;
 }
 
-/*Pagination CSS*/
-.dataTables_paginate a.paginate_button {
-	color: #424242 !important;
+#myModalEmail .modal-dialog {
+	width: 618px;
+	margin: 100px auto 30px;
 }
-
-
-.dataTables_paginate a.paginate_button{
+#myModalEmail .modal-dialog form span {
+	padding-top: 8px;
+	min-width: 128px;
+	vertical-align: top;
 	display: inline-block;
 	font-size: 15px;
-	font-weight: 700;
-	line-height: 14px;
-	color: #0066cc;
-	margin-top: 10px;
-	margin-left: -4px;
-	padding: 12px;
-	cursor: pointer;
-	-webkit-transition: color .24s ease-in-out;
-	transition: color .24s ease-in-out;
 }
-.dataTables_paginate a.paginate_button.disabled {
-	color: #a5a5a5;
-	cursor: default;
+#myModalEmail .modal-dialog form .radio-btns {
+	width: 254px;
+	display: inline-block;
+	margin: 10px auto;
 }
-
-.dataTables_paginate a.paginate_button.current {
-	color: #424242;
-	cursor: default;
-	background: #e5e5e5;
+#myModalEmail .modal-dialog form p {
+	font-family: Arial;
+	font-style: italic;
+	line-height: 1.38;
 }
-.dataTables_paginate a.paginate_button.current:hover,
-.dataTables_paginate a.paginate_button.disabled:hover{
-	background: none;
+#myModalEmail .modal-dialog form > div {
+	padding: 15px 0;
 }
-.dataTables_paginate a.paginate_button:hover,
-.dataTables_paginate a.paginate_button.current:hover
-{
-	background: #f8f7f5;
+#lightcase-case .lightcase-info {
+	overflow: inherit !important;
 }
 
-.paginate_button.previous:before {
-	content: '\f104';
-	font-family: 'FontAwesome';
+.modal-backdrop{
+	position: absolute;
+	z-index: 0;
+
+}
+.modal-content{
+	border-radius: 0;
+}
+.modal-header .close{
+
+	background-color: #424242;
+	color: #fff;
+	text-shadow: none;
+	padding: 2px 5px;
+	opacity: 1;
+}
+#myModalEmail input {
+	border: solid 1px;
+	border-color: rgb(169, 169, 169);
+}
+#myModalEmail .modal-header{
+	border-bottom:0 !important;
+	padding: 15px 20px 0px;
+}
+#myModalEmail .modal-body {
+	font-family: 'Roboto', Helvetica, Arial, sans-serif;
+	font-weight: 500;
+}
+.button-set-email .fa,  .button-set-email .glyphicon,  .btn .fa,  .btn .glyphicon {
+	margin-right: 4px;
 }
 
-.dataTables_paginate a.paginate_button.next:after {
-	content: '\f105';
-	font-family: 'FontAwesome';
+#searchMessageModal .modal-dialog {
+	width: 300px;
 }
 
-/*Pagination CSS End*/
+.search-disable {
+	background: #6b6b6b !important;
+}
 
-/* =Return btn = */
-.return-btn{
-	display:block;
-	width:100%;
-	float:left;
-	padding:15px 0px;
+#myModalEmail .btn-white, #myModalEmail .btn-black{
+	border-radius: 20px;
 }
-.return-btn a .fa {
-	margin-right: 8px;
-}
-.return-btn a, .return-btn a:hover{
-	height: 19px;
-	width: 177px;
-	color: #438CFB;
-	font-family: Roboto;
-	font-size: 14px;
-	line-height: 19px;
-	text-decoration: underline;
-	cursor: pointer;
-}
-/* =end Return btn = */
-#g3_homePage .results{
-	overflow-x: auto;
+
+.fusion-search .search-input .input-group-btn .search-btn-desktop span {
+	font-family: 'Roboto', Helvetica, Arial, sans-serif;
+	font-weight: 500;
 }
 
 /*
@@ -1186,7 +1214,7 @@ Css for form submission start
 .search-not-found label{
 	font-size: 13px;
 	font-weight: 400;
-	color: #4B4B4B;
+	color: #4B4B4B !important;
 	margin: 0 0 8px;
 }
 .search-not-found .form-control{
@@ -1211,16 +1239,116 @@ Css for form submission start
 	font-weight: 500;
 }
 
-.search-not-found .help-block {
-	color:#ED1C24 ;
-	font-size:12px;
+/*Pagination CSS*/
+.dataTables_paginate a.paginate_button {
+	color: #424242;
 }
+
+
+.dataTables_paginate a.paginate_button{
+	display: inline-block;
+	font-size: 15px;
+	font-weight: 700;
+	line-height: 14px;
+	color: #424242 !important;
+	margin-top: 10px;
+	margin-left: -4px;
+	padding: 12px;
+	cursor: pointer;
+	-webkit-transition: color .24s ease-in-out;
+	transition: color .24s ease-in-out;
+}
+.dataTables_paginate a.paginate_button.disabled {
+	color: #a5a5a5;
+	cursor: default;
+}
+
+.dataTables_paginate a.paginate_button.current {
+	color: #424242 !important;
+	cursor: default;
+	background: #e5e5e5;
+}
+.dataTables_paginate a.paginate_button.current:hover,
+.dataTables_paginate a.paginate_button.disabled:hover{
+	background: none;
+}
+.dataTables_paginate a.paginate_button:hover,
+.dataTables_paginate a.paginate_button.current:hover
+{
+	background: #f8f7f5;
+}
+
+.paginate_button.previous:before {
+	content: '\f104';
+	font-family: 'FontAwesome';
+}
+
+.dataTables_paginate a.paginate_button.next:after {
+	content: '\f105';
+	font-family: 'FontAwesome';
+}
+
+/*Pagination CSS End*/
+
+/* =Return btn = */
+.return-btn{
+	display:block;
+	width:100%;
+	float:left;
+	padding:15px 0px;
+}
+.return-btn a .fa {
+	margin-right: 8px;
+}
+.return-btn a, .return-btn a:hover{
+	height: 19px;
+	width: 177px;
+	color: #438CFB !important;
+	font-family: Roboto;
+	font-size: 14px;
+	line-height: 19px;
+	text-decoration: underline !important;
+	cursor: pointer;
+}
+/* =end Return btn = */
+#g3_homePage .results{
+	overflow-x: auto;
+}
+
 /*Serch result items not founds END*/
 
 /*
 Css for Form submission ended.
 */
+
+.search-not-found .help-block {
+	color:#ED1C24 ;
+	font-size:12px;
+}
+
+#search-results_paginate {
+	float: left;
+	background-color: white;
+	text-transform: uppercase;
+}
+
+.dataTables_length label {
+	font-size: 12px;
+	font-weight: 700;
+	color: #424242;
+	text-transform: uppercase;
+}
+
+#g3_homePage .bootstrap a{
+	margin: 0px;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1023px){
+	#sidebar .p-3 .select2-container {
+		width: 100% !important;
+	}
+
+
 	.search-popup-modal .modal-dialog {
 		width: 555px;
 		margin: 100px 100px 30px;
@@ -1230,11 +1358,65 @@ Css for Form submission ended.
 	}
 }
 
-@media only screen and (min-width: 320px) and (max-width: 767px){
-	.bootstrap .product-black-section li:first-child{
-		margin-right: 0px;
-		margin-bottom: 5px;
+@media only screen and (min-width: 768px) and (max-width: 1023px){
+	#sidebar .p-3 .select2-container {
+		width: 100% !important;
 	}
+	.search-popup-modal .modal-dialog {
+		width: 555px;
+		margin: 100px 100px 30px;
+	}
+	.search-popup-modal .modal-content {
+		width: auto !important;
+	}
+}
+@media only screen and (min-width: 320px) and (max-width: 767px){
+
+	#search-results_length{
+		padding: 10px 12px 11px 12px;
+		margin-top: 2px;
+		float: left;
+		margin-bottom: 10px;
+		left: 50%;
+		position: relative;
+		-webkit-transform: translateX(-50%);
+		-moz-transform: translateX(-50%);
+		-ms-transform: translateX(-50%);
+		transform: translateX(-50%);
+	}
+	#search-results_paginate{
+		width: 100%;
+	}
+	#g3_homePage .bootstrap a{
+		margin: 0px;
+	}
+
+	#myModalEmail .modal-dialog {
+		width: auto;
+		margin: 20px;
+	}
+	.return-btn{
+		z-index: 9999;
+		position: relative;
+	}
+
+	.bootstrap .product-black-section li:first-child {
+
+		margin-bottom: 15px;
+	}
+
+	#g3_homePage .container {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+
+	.results {
+		overflow-x: auto;
+	}s
+	 .bootstrap .product-black-section li:first-child{
+		 margin-right: 0px;
+		 margin-bottom: 5px;
+	 }
 	.search-results {
 		display: block;
 	}
@@ -1244,7 +1426,8 @@ Css for Form submission ended.
 	}
 
 	.modal-dialog {
-		width: 330px;
+		width: 320px;
+		margin: 20px auto;
 	}
 	.search-popup-modal .select2-container {
 		width: 100%!important;
@@ -1275,7 +1458,7 @@ Css for Form submission ended.
 	display:none;
 	position: relative;
 	top: 188px;
-	height: 100%;
+	height: 100%
 	left: 0;
 	right: 0;
 	bottom: 0;
@@ -1293,9 +1476,19 @@ Css for Form submission ended.
 	width: 100%;
 }
 
-/*
-My Css
-*/
+.select2-selection__clear{
+	display: none;
+}
+
+.form-horizontal .control-label a {
+	color: #227AD3;
+	font-family: Roboto;
+	font-size: 14px;
+	line-height: 19px;
+	text-decoration: underline;
+	font-weight: normal;
+}
+
 #clickforlargerview{
 	margin-top: 1em;
 }
@@ -1313,17 +1506,4 @@ My Css
 	.results {
 		margin-top: 2em;
 	}
-}
-
-
-/*mine*/
-.backtoSearch {
-	color: #227AD3;
-	font-family: Roboto;
-	font-size: 14px;
-	line-height: 19px;
-	text-decoration: underline;
-	font-weight: normal;
-	margin-top:1em;
-	margin-left:4px;
 }
