Application Search Dev

--- a/src/app/part-detail/part-detail.component.html
+++ b/src/app/part-detail/part-detail.component.html
@@ -14,8 +14,8 @@
                   <!-- ---edit for slider -->
                   <div class="col-xs-12 col-sm-12 col-lg-12">
                     <div class="slider-for slick-initialized slick-slider">
-                      <a href="http:{{imageScr}}" data-rel="lightcase">
-                        <img id="productMainImage" src="http:{{imageScr}}" title="{{desc}}">
+                      <a href="{{imageScr}}" data-rel="lightcase">
+                        <img id="productMainImage" src="{{imageScr}}" title="{{desc}}">
                         <div class="clear"></div>
                         <p id="clickforlargerview">
                           {{clickForLargerView}}
@@ -469,11 +469,11 @@
                   <!-- Quote Single SKU button -->
 
                   <li>
-                    <a class="btn-whereToBuy" routerLink="/coverage/{{partNumber}}" [queryParams]="{application: appType}" onclick="" id="productApplicationCoverage">
+                   <!-- <a class="btn-whereToBuy" routerLink="/coverage/{{partNumber}}" [queryParams]="{application: appType}" onclick="" id="productApplicationCoverage">
                       <div class="whereToBuy-txt_div">
                         <span class="whereToBuy-txt" style="right: 0px;">{{applicationCoverageTilte}}</span>
                       </div>
-                    </a>
+                    </a>-->
                   </li>
 
                   <li>
