Application Search Preview

--- a/src/app/part-detail/part-detail.component.html
+++ b/src/app/part-detail/part-detail.component.html
@@ -469,11 +469,11 @@
                   <!-- Quote Single SKU button -->
 
                   <li>
-                   <!-- <a class="btn-whereToBuy" routerLink="/coverage/{{partNumber}}" [queryParams]="{application: appType}" onclick="" id="productApplicationCoverage">
+                    <a class="btn-whereToBuy" routerLink="/coverage/{{partNumber}}" [queryParams]="{application: appType}" onclick="" id="productApplicationCoverage">
                       <div class="whereToBuy-txt_div">
                         <span class="whereToBuy-txt" style="right: 0px;">{{applicationCoverageTilte}}</span>
                       </div>
-                    </a>-->
+                    </a>
                   </li>
 
                   <li>
